ppcs 2011 hispanic fix 3

--- a/raw_data/ppcs2011.Rmd
+++ b/raw_data/ppcs2011.Rmd
@@ -10,7 +10,6 @@ ppcs_2011 <- da34276.0001
 #nrow(ppcs_2011)
 ```
 
-
 ```{r}
 #filter out the face to face contacts 
 ppcs_2011 <- ppcs_2011 %>% filter(V336 == "(1) Yes")
@@ -23,9 +22,9 @@ ppcs_2011 <- ppcs_2011 %>% filter(V336 == "(1) Yes")
 ```{r}
 #RACE
 ppcs_2011 <- ppcs_2011 %>%
-  mutate(civilian_race =  case_when(RACE == '(01) White Only' ~ 'white',
-                                    (RACE == '(02) Black Only' & HISP == '(1) Respondent is Hispanic') ~ 'black',
-                                    (HISP == '(1) Respondent is Hispanic' & RACE != '(02) Black Only')~ 'hispanic',
+  mutate(civilian_race =  case_when((RACE == '(01) White Only' & HISP != '(1) Respondent is Hispanic') ~ 'white',
+                                    (RACE == '(02) Black Only') ~ 'black',
+                                    (HISP == '(1) Respondent is Hispanic' & RACE != '(02) Black Only') ~ 'hispanic',
                                     TRUE ~ 'other'))
 
 ```
