--- a/raw_data/load_1996_ppcs.Rmd
+++ b/raw_data/load_1996_ppcs.Rmd
@@ -19,9 +19,11 @@ library(foreign)
 
 #Load Data
 ```{r load-data}
-ppcs_1996 <- read_ascii_setup('06999-0001-Data.txt','06999-0001-Setup.sps')
+ppcs_1996 <- read_ascii_setup('06999-0001-Data.txt','06999-0001-Setup.sas')
 ppcs_1996 <- ppcs_1996 %>%
   filter(LAST_12_MONTHS_CONTACT_W_POLICE_OFFICER == 'Yes' & CONTACTS_W_POLICE_OFFICER_IN_PERSON == 'Yes')
+
+df<-data.frame(colnames(ppcs_1996)) %>% view
 ```
 
 #Civilian Race
@@ -58,10 +60,10 @@ ppcs_1996 <- ppcs_1996 %>%
 
 #Civilian income
 Not found
-Coded as 1 since 1 is for less than 20k and NA
+Coded as 1 since 1 is for less than 20k
 ```{r civilian-income}
 ppcs_1996 <- ppcs_1996 %>%
-  mutate(civilian_income = 1)
+  mutate(civilian_income = NA)
 
 ```
 
@@ -84,7 +86,7 @@ ppcs_1996 <- ppcs_1996 %>%
   mutate(time_of_encounter = case_when(
     (DAYTIME_OR_NIGHTTIME_WHEN_INCIDENT == "Daytime") ~ 3,
     (DAYTIME_OR_NIGHTTIME_WHEN_INCIDENT == "Nighttime") ~ 6
-)) 
+))
 ```
 #Officer race
 
@@ -141,8 +143,14 @@ Gathered data and then took all the values where the occurence was Once or More 
 #Turns out since every observation is a contact with a police officer they are all 'other stops' and #there should be no NA's
 ```
 ```{r type-of-incident}
+missing <- c(3,9)
 ppcs_1996 <- ppcs_1996 %>%
-  mutate(type_of_incident = 3)
+  mutate(type_of_incident = case_when(
+    (REASON_TRAFFIC_PARKING_VIOLATION %in% missing ) ~2,
+    (REASON_INVOLVED_IN_TRAFFIC_ACCIDENT %in% missing)~2,
+    (REASON_WITNESS_TO_TRAFFIC_ACCIDENT %in% missing)~2,
+    TRUE ~ 3
+  )) %>% filter(type_of_incident == 2) %>% view
 ```
 
 
